fixed window spacing and added scrolling to side widows

--- a/Desktop/app/style/tab2.css
+++ b/Desktop/app/style/tab2.css
@@ -1,3 +1,4 @@
+
 /* General Styles */
 QWidget {
     background-color: #f0f0f5;
@@ -56,7 +57,14 @@ QPushButton {
     border: 1px solid #c0c0c0;
 }
 
-/* Layout */
-QVBoxLayout, QHBoxLayout {
-    margin: 0px;
+QLabel {
+    padding: 10px;
+    background-color: #f2f2f2;
+    border-radius: 10px;
+}
+
+QScrollArea {
+    border: 2px solid #6ca0dc;
+    border-radius: 10px;
+
 }
